Resolve CORS policy blocking and update API configuration
- Installed 'cors' dependency in the backend.
- Added @CrossOrigin / CORS middleware to the TicketController and SecurityConfig.
- Updated vite.config.js with proxy settings for local development.
- Refactored frontend api.js to align with the new backend endpoint structure.
- Fixed 'Failed to fetch' error in the dashboard.